# cityscope-backend

./: .env  .env.example  .gitignore  Dockerfile  PROJECT_SCHEME.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/core/: __init__.py  config.py  deps.py  security.py
app/db/: __init__.py  seed.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 53f2808b4e92_initial_tables.py
app/etl/: __init__.py  ibge_cities.py  load_sample.py  run_all.py
app/etl/ibge/: __init__.py  cities.py  density.py  download_cities.py  download_indicators.py  population.py
app/models/: __init__.py  city.py  indicator.py  indicator_value.py  user.py
app/routers/: __init__.py  auth.py  cities.py  indicators.py  states.py
app/schemas/: __init__.py  auth.py  city.py  indicator.py  user.py
