[tool.poetry]
name = "cityscope-backend"
version = "0.1.0"
description = "Backend API for CityScope project (FastAPI + JWT + Postgres)"
authors = ["Ricardo Wurzmann <cadu@kovrr.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fastapi = ">=0.115"
uvicorn = { extras = ["standard"], version = ">=0.30" }
python-dotenv = ">=1.0"
pydantic = ">=2.8"
sqlalchemy = ">=2.0"
psycopg = { version = ">=3.2", extras = ["binary"] }
alembic = ">=1.13"
passlib = { version = ">=1.7", extras = ["bcrypt"] }
bcrypt = ">=4.0.0"
pyjwt = { version = ">=2.9", extras = ["crypto"] }
httpx = ">=0.27"
email-validator = ">=2.1"
requests = ">=2.31"

[tool.poetry.group.dev.dependencies]
black = ">=24.0"
ruff = ">=0.6"
pytest = ">=8.0"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
